# FacebookProfiler

./: .env  .gitignore  .windsurfrules  Dockerfile  Dockerfile.backend  LICENSE  NETLIFY_SETUP.md  Readme.md  api_server.py  cloudbuild.yaml  config.json  count_tokens.py  data_structure.md  digital_psychometrics_architecture.md  docker-compose.yml  generate_profile.py  main.py  netlify.toml  nginx.conf  package-lock.json  package.json  profile_result.md  profile_result_save.md  profile_setup_plan.md  prompt_config.json  proxy-server.js  pyproject.toml  render.yaml  run_web.py  tailwind.config.js
cloud-function/: index.js  package.json
netlify/functions/: openrouter-proxy.js
prompts/: profiler.txt
public/: manifest.json
react/: .env.production  nginx.conf  package-lock.json  package.json  windsurf_deployment.yaml
react/public/: index.html  profiler_prompt.txt
react/src/: App.css  App.js
resources/: required_files.csv
src/: App.css  App.js  __init__.py  analyze_data.py  analyze_filtered_data.py  copy_filtered_data.py  data_handler.py  index.css
src/analysis/: __init__.py  affective_computing.py  digital_psychometrics.py  facebook_targeting_reverser.py  vulnerability_analyzer.py
src/components/: AnalysisPage.js  AnalysisPage.new.js  LandingPage.js  OpenRouterTestPage.js  ProcessingPage.js  ProfileAnalysisPage.js
src/models/: __init__.py  behavioral_vectors.py
src/parsers/: __init__.py  activity_parser.py  ads_parser.py  json_parser.py
src/utils/: langfuseClient.js  openRouterTest.js  profileAnalyzer.js  promptDataSelector.js
src/web/: app.py
(+18 files in other folders)
