[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fb-profile-analyzer"
version = "0.1.0"
description = "Digital psychometrics analyzer for Facebook profile data"
authors = [
    {name = "User", email = "user@example.com"},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    # Core ML/Data Science
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    
    # NLP & Psychology
    "transformers>=4.21.0", 
    "torch>=2.0.0",
    "nltk>=3.8",
    "textblob>=0.17.0",
    "spacy>=3.6.0",
    
    # Emotion & Sentiment Analysis
    "vaderSentiment>=3.3.2",
    "textstat>=0.7.0",
    
    # Web Framework
    "flask>=2.3.0",
    "flask-cors>=4.0.0",
    
    # Time Series & Behavioral Analysis
    "statsmodels>=0.14.0",
    "networkx>=3.1.0",
    
    # Visualization
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0", 
    "plotly>=5.17.0",
    
    # Local LLM
    "ollama>=0.1.0",
    
    # Additional utilities
    "python-dateutil>=2.8.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
    "ruff>=0.0.280",
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
target-version = "py311"
line-length = 88
